syntax = "proto3";

package album;
option go_package = "proto/album";

message Album {
    optional string id = 1;
    string title = 2;
    string artist = 3;
    string releaseDate = 4;
}

message CreateAlbumRequest {
    Album album = 1;
}

message GetAlbumsRequest {}

message GetAlbumRequest {
    string id = 1;
}

message AlbumGeneralResponse {
    string message = 1;
}

message GetAlbumResponse {
    string message = 1;
    Album album = 2;
}

message GetAlbumsResponse {
    string message = 1;
    repeated Album albums = 2;
}

service AlbumService {
    rpc CreateAlbum(CreateAlbumRequest) returns (AlbumGeneralResponse);
    rpc GetAlbum(GetAlbumRequest) returns (GetAlbumResponse);
    rpc GetAlbums(GetAlbumsRequest) returns (GetAlbumsResponse);
}
